--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 name: Java CI with Maven and Security Scans
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 jobs:
   maven:
     runs-on: ubuntu-latest
